7 - Exposing the app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
    app: demo-pod
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
